Discovered a problem with the size of the video cards and the effect of the current wrapping. Starting to work on possible CSS fixes.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -217,7 +217,7 @@ input.search-form {
 
 /* Column navbar */
 #column-navbar {
-    height: 95vh;
+    height: 93vh;
     overflow-y: scroll;
 }
 
@@ -653,6 +653,22 @@ hr {
 /* Video thumbnail border */
 .video-border {
     border-radius: 15px;
+}
+
+#main-video-one {
+    min-width: 325px;
+}
+#main-video-two {
+    min-width: 325px;
+}
+#main-video-three {
+    min-width: 325px;
+}
+#main-video-four {
+    min-width: 325px;
+}
+#main-video-five {
+    min-width: 325px;
 }
 
 #video-one-hover-image {
